# image-api

./: .env  .gitignore  Dockerfile  README.md  a.http  docker-compose.dev.yml  docker-compose.runner.yml  env.py  main.py  pyproject.toml
.github/workflows/: cd.yml
app/: .env  bodies.py  data.py  env.py  main.py  mdls.py  reses.py  tokens.py
app/file/: __get_file.py  __init__.py
app/img/: __init__.py
app/prefernce/: __init__.py
app/templates/: index.html
app/upload/: __init__.py
app/util/: err.py  keycloak.py  tokens.py
app/util/fastapiutil/: __init__.py
app/util/urls/: __http_client.py  __http_request.py  __http_response.py  __init__.py  __url.py
fastapi-pic/: main.py
image-api-main/: README.md
image-api-main/fastapi-pic/templates/: index.html
