[project]
name = "image-api"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "kigawa01", email = "contact@kigawa.net" }
]
dependencies = [
    "fastapi>=0.112.4",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["app"]
